화면 전환하기

--- a/start/index.html
+++ b/start/index.html
@@ -7,6 +7,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link rel = "stylesheet" href = "./css/default.css">
         <link rel = "stylesheet" href = "./css/main.css">
+        <link rel = "stylesheet" href = "./css/qna.css">
+        <link rel = "stylesheet" href = "./css/animation.css">
     </head>
     <body>
         <div class = "container">
@@ -18,12 +20,16 @@
                 <p>
                     나만의 MBTI 사이트입니다! <br>
                 </p>
-                <button type ="button" class = "btn btn-outline=danger mt-3">시작하기</button>
+                <button type ="button" class = "btn btn-outline=danger mt-3" onclick = "js:begin()">시작하기</button>
             </section>
             <section id = "qna">
+                <p>
+                    hello
+                </p>
             </section>
             <section id = "main">
             </section>
+            <script src = "./js/start.js" charset = "utf-8"></script>
         </div>
     </body>
 </html>
