--- a/start/index.html
+++ b/start/index.html
@@ -9,10 +9,11 @@
         <link rel = "stylesheet" href = "./css/main.css">
         <link rel = "stylesheet" href = "./css/qna.css">
         <link rel = "stylesheet" href = "./css/animation.css">
+        <link rel = "stylesheet" href = "./css/result.css">
     </head>
     <body>
         <div class = "container">
-            <section id = "main" class = "mx-auto mt-5 py-5 px-3">
+            <section id = "main" class = "mx-auto my-5 py-5 px-3">
                 <h3>십이간지로 알아보는 연애유형</h3>
                 <div class="col-lg-6 col-md-6 col-sm-6 mx-auto">
                     <img src = "./img/main.png" alt = "mainImage" class = "img-fluid">
@@ -23,6 +24,11 @@
                 <button type ="button" class = "btn btn-outline=danger mt-3" onclick = "js:begin()">시작하기</button>
             </section>
             <section id = "qna">
+                <div class="status mx-auto mt-5">
+                    <div class="statusBar">
+
+                    </div>
+                </div>
                 <div class="qBox my-5 py-3 mx-auto">
 
                 </div>
@@ -30,7 +36,17 @@
                     
                 </div>
             </section>
-            <section id = "main">
+            <section id = "result">
+                <h3>당신의 결과는?!</h3>
+                <div class="resultname">
+
+                </div>
+                <div id="resultImg" class="col-lg-6 col-md-6 col-sm-6 mx-auto">
+                </div>
+                <div class="resultDesc">
+
+                </div>
+                <button type ="button" class = "btn btn-outline=danger mt-3" onclick = "js:begin()">시작하기</button>
             </section>
             <script src = "./js/data.js" charset = "utf-8"></script>
             <script src = "./js/start.js" charset = "utf-8"></script>
