--- a/start/index.html
+++ b/start/index.html
@@ -3,7 +3,18 @@
     <head>
         <meta charset= "utf-8">
         <meta name = "viewport" content="width=device-width, initial-scale = 1">
-        <title></title>
+        <meta name = "author" content = "PandaCoding">
+        <meta name = "keywords" content = "십이간지 연애유형">
+        <meta name = "description" content = "십이간지 연애유형">
+
+        <!-- 공유 form -->
+        <meta property = "og:url" content = ""/>
+        <meta property = "og:title" content = "십이간지 연애유형" />
+        <meta property = "og:type" content = "website" />
+        <meta property = "og:image" content = "img/share.png" />
+        <meta property = "og:description" content = "십이간지로 알아보는 연애유형" />
+        
+        <title>십이간지 연애유형</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link rel = "stylesheet" href = "./css/default.css">
         <link rel = "stylesheet" href = "./css/main.css">
